--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h3 align="center">HELLO WORLD !!!</h3>
     <h3>added a new feature in feature1 branch (button)</h3>
+
+    <p> Oopsie ! Added this by mistake </p>
 </body>
 </html>
